UBO-482 extends css custom select rule to fix overflow in edge

--- a/ubo-common/src/main/resources/META-INF/resources/scss/_ubo-forms.scss
+++ b/ubo-common/src/main/resources/META-INF/resources/scss/_ubo-forms.scss
@@ -11,6 +11,7 @@
     -moz-appearance:none;
     -webkit-appearance:none;
     overflow: hidden;
+    min-width: 0;
   }
 
   // shortcut-classes for forms
